tests/grammar/snapshots/r#mod__grammar__alpha034__function_invocation-7.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"func(1 2\")"
---
(
    Some(
        [
            (
                Statement(
                    (
                        Expression(
                            (
                                FunctionInvocation(
                                    (
                                        "func",
                                        0..4,
                                    ),
                                    [
                                        (
                                            Number(
                                                (
                                                    1.0,
                                                    5..6,
                                                ),
                                            ),
                                            5..6,
                                        ),
                                        (
                                            Number(
                                                (
                                                    2.0,
                                                    7..8,
                                                ),
                                            ),
                                            7..8,
                                        ),
                                    ],
                                    None,
                                ),
                                0..8,
                            ),
                        ),
                        0..8,
                    ),
                ),
                0..8,
            ),
        ],
    ),
    [
        Simple {
            span: 7..8,
            reason: Unexpected,
            expected: {
                Some(
                    Token(
                        ",",
                    ),
                ),
            },
            found: Some(
                Token(
                    "2",
                ),
            ),
            label: Some(
                "expression",
            ),
        },
        Simple {
            span: 8..9,
            reason: Unexpected,
            expected: {
                Some(
                    Token(
                        ")",
                    ),
                ),
            },
            found: None,
            label: Some(
                "expression",
            ),
        },
    ],
)
