tests/grammar/snapshots/r#mod__grammar__alpha034__function_invocation-8.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"func(1 2 let\")"
---
(
    Some(
        [
            (
                Statement(
                    (
                        Expression(
                            (
                                FunctionInvocation(
                                    (
                                        "func",
                                        0..4,
                                    ),
                                    [
                                        (
                                            Number(
                                                (
                                                    1.0,
                                                    5..6,
                                                ),
                                            ),
                                            5..6,
                                        ),
                                        (
                                            Number(
                                                (
                                                    2.0,
                                                    7..8,
                                                ),
                                            ),
                                            7..8,
                                        ),
                                        (
                                            Error,
                                            9..12,
                                        ),
                                    ],
                                    None,
                                ),
                                0..12,
                            ),
                        ),
                        0..12,
                    ),
                ),
                0..12,
            ),
        ],
    ),
    [
        Simple {
            span: 7..8,
            reason: Unexpected,
            expected: {
                Some(
                    Token(
                        ",",
                    ),
                ),
            },
            found: Some(
                Token(
                    "2",
                ),
            ),
            label: Some(
                "expression",
            ),
        },
        Simple {
            span: 9..12,
            reason: Unexpected,
            expected: {
                Some(
                    Token(
                        ",",
                    ),
                ),
            },
            found: Some(
                Token(
                    "let",
                ),
            ),
            label: Some(
                "expression",
            ),
        },
        Simple {
            span: 9..12,
            reason: Unexpected,
            expected: {
                Some(
                    Token(
                        "true",
                    ),
                ),
                Some(
                    Token(
                        "\"",
                    ),
                ),
                Some(
                    Token(
                        "not",
                    ),
                ),
                Some(
                    Token(
                        "(",
                    ),
                ),
                Some(
                    Token(
                        "false",
                    ),
                ),
                Some(
                    Token(
                        "nameof",
                    ),
                ),
                Some(
                    Token(
                        "[",
                    ),
                ),
                Some(
                    Token(
                        "status",
                    ),
                ),
                Some(
                    Token(
                        "$",
                    ),
                ),
                Some(
                    Token(
                        "-",
                    ),
                ),
                Some(
                    Token(
                        "null",
                    ),
                ),
            },
            found: Some(
                Token(
                    "let",
                ),
            ),
            label: Some(
                "expression",
            ),
        },
        Simple {
            span: 12..13,
            reason: Unexpected,
            expected: {
                Some(
                    Token(
                        ")",
                    ),
                ),
            },
            found: None,
            label: Some(
                "expression",
            ),
        },
    ],
)
