tests/grammar/snapshots/r#mod__grammar__alpha034__function_invocation.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"func()\").unwrap()"
---
(
    Statement(
        [
            (
                Expression(
                    (
                        FunctionInvocation(
                            (
                                "func",
                                0..4,
                            ),
                            [],
                            None,
                        ),
                        0..6,
                    ),
                ),
                0..6,
            ),
        ],
    ),
    0..6,
)
