tests/grammar/snapshots/r#mod__grammar__alpha034__gt-2.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"1 + 2 > 2 + 1\").unwrap()"
---
(
    Statement(
        [
            (
                Expression(
                    (
                        Gt(
                            (
                                Add(
                                    (
                                        Number(
                                            (
                                                1.0,
                                                0..1,
                                            ),
                                        ),
                                        0..1,
                                    ),
                                    (
                                        Number(
                                            (
                                                2.0,
                                                4..5,
                                            ),
                                        ),
                                        4..5,
                                    ),
                                ),
                                0..5,
                            ),
                            (
                                Add(
                                    (
                                        Number(
                                            (
                                                2.0,
                                                8..9,
                                            ),
                                        ),
                                        8..9,
                                    ),
                                    (
                                        Number(
                                            (
                                                1.0,
                                                12..13,
                                            ),
                                        ),
                                        12..13,
                                    ),
                                ),
                                8..13,
                            ),
                        ),
                        0..13,
                    ),
                ),
                0..13,
            ),
        ],
    ),
    0..13,
)
